<resources>
    <string name="app_name">MkcSchool</string>

    <!--/////////////////Local Server ///////////////-->
    <string name="api_base" translatable="false">http://148.66.128.232:8002/</string>


    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="student_user_id">Student User id</string>
    <string name="password">Password</string>
    <string name="save_password">Save Password</string>
    <string name="login">Login</string>
    <string name="fotgot_password">Fotgot Password ?</string>
    <string name="fotgot_password_">Fotgot Password</string>
    <string name="home">Home</string>
    <string name="timetable">Timetable</string>
    <string name="attendance">Attendance</string>
    <string name="liveclass">Live Class</string>
    <string name="account">Account</string>
    <string name="teacher">Teacher</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Date</string>
    <string name="day">Day</string>
    <string name="remarks">Remarks</string>
    <string name="live_class">Live Class</string>
    <string name="starttime">StartTime :</string>
    <string name="endtime">EndTime :</string>
    <string name="select_month">Select Month</string>
    <string name="select_year">Select Year</string>
    <string name="grade">Grade</string>
    <string name="subject">Subject</string>
    <string name="score">Score</string>
    <string name="download_grade_card">Download Grade Card</string>
    <string name="announcement">Announcements</string>
    <string name="join_live_class">Join Live Class</string>
    <string name="error_userid">Please Enter User Id!</string>
    <string name="error_password">Please Enter Password !</string>
    <string name="you_have_successfully_login">You have Successfully Logged In!</string>
    <string name="attendance_of_this_season">Attendance for current session</string>
    <string name="student_overall_performance">Student Overall Performance</string>
    <string name="personal_information">Personal Information</string>
    <string name="father_s_name">Father\'s Name -</string>
    <string name="mother_s_name">Mother\'s Name -</string>
    <string name="email_id">Email id -</string>
    <string name="contact_info">Contact Info -</string>
    <string name="permanent_address">Permanent Address -</string>
    <string name="secondary_address">Secondary Address -</string>
    <string name="academic_information">Academic Information</string>
    <string name="school_name">School Name -</string>
    <string name="date_of_joining_in_school">Date of joining in School -</string>
    <string name="avarage_performance">Avarage Performance -</string>
    <string name="exams">Exams</string>
    <string name="achievement">Achievement</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address -</string>
    <string name="select_exam">Select Exam</string>
    <string name="no_event_found_on_this_date">No event found on this date</string>
    <string name="enter_your_mobile_no">Enter Your Mobile No</string>
    <string name="enter_your_email_id">Enter Your Email id</string>
    <string name="error_email_valid">Enter your valid Email id!</string>
    <string name="error_phone_valid">Enter your valid Phone Number!</string>
    <string name="change_password">Change Password</string>
    <string name="enter_your_otp">Enter Your OTP</string>
    <string name="enter_your_old_password">Enter Your Old Password</string>
    <string name="error_old_password">Please Enter Your Old Password</string>
    <string name="error_username">Please Enter Your UserName</string>
    <string name="error_new_password">Enter Your New Password</string>
    <string name="error_confirm_password">Enter Your Confirm Password</string>
    <string name="error_password_match">Password does not match </string>
    <string name="enter_your_new_password">Enter Your New Password</string>
    <string name="enter_your_confirm_password">Enter Your Confirm Password</string>
    <string name="error_invalid_otp">Please Enter Valid OTP!</string>
    <string name="announcement_details">Announcement Details</string>
    <string name="hobies">Hobies</string>
    <string name="username">Enter Your Username</string>


</resources>