<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="HardcodedText">

    <item
        android:id="@+id/nav_grade"
        android:title="@string/grade" />

    <item
        android:id="@+id/nav_liveclass"
        android:title="@string/liveclass" />

    <item
        android:id="@+id/nav_announcement"
        android:title="@string/announcement" />

    <item
        android:id="@+id/nav_attendance"
        android:title="@string/attendance" />

    <item
        android:id="@+id/nav_teacher"
        android:title="@string/teacher" />

    <item
        android:id="@+id/nav_timetable"
        android:title="@string/timetable" />

    <item
        android:id="@+id/nav_account"
        android:title="@string/account" />

    <item
        android:id="@+id/nav_change_password"
        android:title="Change Password" />


    <item
        android:id="@+id/nav_logout"
        android:title="Logout" />

</menu>