<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>
    <item
        android:id="@+id/bottom_navigation_timetable"
        android:enabled="true"
        android:icon="@drawable/ic_timetable"
        android:title="@string/timetable"/>

    <item
        android:id="@+id/bottom_navigation_attendance"
        android:enabled="true"
        android:icon="@drawable/ic_attendance"
        android:title="@string/attendance"/>

    <item
        android:id="@+id/bottom_navigation_liveclass"
        android:enabled="true"
        android:icon="@drawable/ic_liveclass"
        android:title="@string/liveclass"/>

    <item
        android:id="@+id/bottom_navigation_account"
        android:enabled="true"
        android:icon="@drawable/ic_account"
        android:title="@string/account"/>
</menu>