<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".ui.attendance.AttendanceFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:text="@string/attendance"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"
        android:background="@color/colorPrimaryDark"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_13sdp"
        android:text="Session 2020-2021"
        android:gravity="center"
        android:textSize="@dimen/text_size_med"
        android:textColor="@color/colorText"
        android:fontFamily="@font/lato"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/_13sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/selectMonth"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/select_month"
            android:textColor="@color/colorText"
            android:fontFamily="@font/lato_bold"
            android:textSize="@dimen/text_size_med"
            android:padding="@dimen/_11sdp"
            android:layout_marginRight="@dimen/_6sdp"
            android:background="@drawable/rounded_corner_blackborder"
            android:drawableRight="@drawable/ic_arrow_down"
            android:layout_gravity="center"
            android:gravity="center_vertical"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:visibility="gone"
            android:id="@+id/selectYear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/select_year"
            android:textColor="@color/colorText"
            android:fontFamily="@font/lato"
            android:padding="@dimen/_11sdp"
            android:layout_marginLeft="@dimen/_6sdp"
            android:background="@drawable/rounded_corner_blackborder"
            android:drawableRight="@drawable/ic_arrow_down"
            android:layout_gravity="center"
            android:gravity="center_vertical"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAttendacneCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_13sdp"
        app:cardBackgroundColor="@color/white"
        android:layout_margin="@dimen/_13sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@drawable/rounded_top_corner_black">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:fontFamily="@font/lato_bold"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/day"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:fontFamily="@font/lato_bold"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/attendance"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:fontFamily="@font/lato_bold"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/remarks"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:fontFamily="@font/lato_bold"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAttendance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_11sdp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView  android:visibility="gone"
        android:id="@+id/ivNoDataFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_23sdp"
        android:src="@drawable/ic_no_data_found"/>



</LinearLayout>
</layout>