<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".ui.login.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:textSize="@dimen/text_size_big"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/_60sdp"
                android:text="@string/login"
                android:textColor="@color/black"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
          android:layout_marginRight="@dimen/_23sdp"
            android:layout_marginLeft="@dimen/_23sdp"
            android:layout_alignParentBottom="true">

            <!--////////////////////// Student Id //////////////////////-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilStudentId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/student_user_id"
                android:theme="@style/TextInputLayoutAppearance">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUserId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:textColor="@color/white"
                    android:inputType="text"
                    android:textSize="@dimen/text_size"
                    android:maxLines="1"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginTop="@dimen/_13sdp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white"
                android:theme="@style/TextInputLayoutAppearance">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:maxLines="1"
                    android:textSize="@dimen/text_size"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cbSavePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_13sdp"
                android:backgroundTint="@color/colorAccent"
                android:buttonTint="@color/white"
                android:text="@string/save_password"
                android:textSize="@dimen/text_size"
                android:textColor="@color/white"
                android:padding="@dimen/_6sdp"/>

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/login"
                app:spinning_bar_width="@dimen/_2sdp"
                app:spinning_bar_color="@color/colorAccent"
                app:spinning_bar_padding="@dimen/_6sdp"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size_med"
                android:fontFamily="@font/lato"
                android:background="@drawable/rounded_corner_button_white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:textSize="@dimen/text_size"
                android:paddingTop="@dimen/_13sdp"
                android:paddingBottom="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:text="@string/fotgot_password"
                android:textColor="@color/colorLiteRed"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>