<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/llMainLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/_11sdp"
    android:paddingBottom="@dimen/_11sdp"
    android:paddingRight="@dimen/_11sdp"
    android:paddingLeft="@dimen/_11sdp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Math"
        android:fontFamily="@font/lato_bold"
        android:textColor="@color/colorText"
        android:textSize="@dimen/text_size"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTeacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Teacher Name"
        android:layout_marginTop="@dimen/_6sdp"
        android:fontFamily="@font/lato"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starttime"
            android:fontFamily="@font/lato"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endtime"
            android:fontFamily="@font/lato"
            android:layout_marginTop="@dimen/_6sdp"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvJoinLiveClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liveclass"
            android:layout_gravity="center"
            android:fontFamily="@font/lato"
            android:paddingLeft="@dimen/_13sdp"
            android:paddingRight="@dimen/_13sdp"
            android:paddingBottom="@dimen/_3sdp"
            android:paddingTop="@dimen/_3sdp"
            android:gravity="center"
            android:drawablePadding="@dimen/_3sdp"
            android:drawableLeft="@drawable/ic_eye_icon_white"
            android:background="@drawable/rounded_corner_red"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"/>

    </LinearLayout>

</LinearLayout>