<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".ui.grade.GradeFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:text="@string/grade"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size" />

    <RelativeLayout
        android:id="@+id/rlExamSelector"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_13sdp"
        android:visibility="gone"
        android:layout_below="@+id/tvHeader"
        android:background="@drawable/rounded_corner_blackborder">
        <com.mkc.school.utils.customview.CustomSpinner
            android:id="@+id/spExam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_9sdp"
            android:backgroundTint="@color/white"
            android:spinnerMode="dialog"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSelectExam"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableRight="@drawable/ic_arrow_down"
            android:fontFamily="@font/lato_bold"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/_11sdp"
            android:paddingRight="@dimen/_9sdp"
            android:text="@string/select_exam"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_plus" />
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:visibility="gone"
        android:id="@+id/cvGradeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_13sdp"
        app:cardBackgroundColor="@color/white"
        android:layout_below="@+id/rlExamSelector"
        android:layout_margin="@dimen/_13sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@drawable/rounded_top_corner_black">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/subject"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:fontFamily="@font/lato_bold"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/score"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:fontFamily="@font/lato_bold"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/grade"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:fontFamily="@font/lato_bold"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=""
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:fontFamily="@font/lato_bold"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvGrade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_11sdp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView  android:visibility="gone"
        android:id="@+id/ivNoDataFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_23sdp"
        android:src="@drawable/ic_no_data_found"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDwnldGradeCrd"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="@dimen/_35sdp"
        android:text="@string/download_grade_card"
        android:fontFamily="@font/lato_bold"
        android:textSize="@dimen/text_size_med"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_23sdp"
        android:textColor="@color/white"
        android:background="@drawable/rounded_corner_orange"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_gradelist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvHeader" />








</RelativeLayout>
</layout>